# hordes-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
hordes/: __init__.py  buildscore.py  cache.py  data.py  effects.py  entity.py  models.py  stats.py  tierlist.py  utils.py
hordes/character/: __init__.py  character.py  elo.py  prestige.py  slots.py  statpoints.py
hordes/item/: customs.py  item.py  logic.py  stats.py
hordes/rendering/: __init__.py  assets.py  character.py  colors.py  font.py  formatters.py  item.py  layout.py  loader.py  strings.py  utils.py  viewgear.py
hordes/types/: character.py  common.py  item.py
